--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Praneeth Avasarala</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>"The important thing is not to stop questioning. Curiosity has its own reason for existence. One cannot help but be in awe when he contemplates the mysteries of eternity, of life, of the marvelous structure of reality. It is enough if one tries merely to comprehend a little of this mystery each day" -- Albert Einstein </p>
+								<p>Source: Old Man's Advice to Youth: 'Never Lose a Holy Curiosity.' - LIFE Magazine (2 May 1955) p. 64</p>
 							</div>
 						</div>
 						<nav>
