--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<ul>
 								<li><a href="#intro">About Me</a></li>
 								<li><a href="#work">Research</a></li>
-								<li><a href="#about">Interesting Results</a></li>
+								<li><a href="#about">CV</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
