--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 								<p>Source: <a href="https://books.google.co.in/books?id=dlYEAAAAMBAJ&pg=PA42&source=gbs_toc_r&redir_esc=y&hl=en#v=onepage&q&f=false" target="_blank">Old Man's Advice to Youth: 'Never Lose a Holy Curiosity.'</a> - LIFE Magazine (2 May 1955) p. 64</p>
 								     <ul class="icons">
 									        <li><a href="https://github.com/Praneeth-Avasarala" target="_blank"  class="icon brands fa-github"><span class="label">Github</span></a></li>
+									        <li><a href="praneethavasarala@gmail.com" target="_blank" class="icon brands fa-envelope"><span class="label">Email</span></a></li>
 									        <li><a href="https://www.linkedin.com/in/praneeth-avasarala-11b8b7136/" target="_blank"  class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://twitter.com/IamPraneeth77" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									        <li><a href="https://www.instagram.com/praneethavasarala/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
