--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 								<li><a href="#work">Research</a></li>
 								<li><a href="#cv">CV</a></li>
 								<li><a href="#contact">Contact</a></li>
+								<li><a href="#elements">Text Syntax</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
