--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 						<nav>
 							<ul>
 								<li font-size:30px><a href="#intro">About Me</a></li>
-								<li font-size:30px><a href="#work">Research</a></li>
-								<li font-size:30px><a href="#cv">CV</a></li>
-								<li font-size:30px><a href="#contact">Contact</a></li>
-								<li font-size:30px><a href="#elements">Text Syntax</a></li>
+								<li><a href="#work">Research</a></li>
+								<li><a href="#cv">CV</a></li>
+								<li><a href="#contact">Contact</a></li>
+								<li><a href="#elements">Text Syntax</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
