--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<nav>
 							<ul>
 								<li font-size:30px><a href="#intro">About Me</a></li>
-								<li><a href="#work">Research</a></li>
+								<li><a href="#work" font-size:30px>Research</a></li>
 								<li><a href="#cv">CV</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#elements">Text Syntax</a></li>
