--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 						</div>
 						<nav>
 							<ul>
-								<li font-size:30px><a href="#intro">About Me</a></li>
-								<li><a href="#work" font-size:30px>Research</a></li>
+								<li><a href="#intro">About Me</a></li>
+								<li><a href="#work">Research</a></li>
 								<li><a href="#cv">CV</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#elements">Text Syntax</a></li>
