--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<div class="inner">
 								<h1 style="color:#FA8072;">Praneeth Avasarala</h1>
 								<h2> My Personal Motto </h2>
-						                <p> <b>Favourite quote by Albert Einstein: </b></p>
+						                <p> Favourite quote by Albert Einstein: </p>
 								<blockquote font-size: 17px>The important thing is not to stop questioning. Curiosity has its own reason for existence. One cannot help but be in awe when he contemplates the mysteries of eternity, of life, of the marvelous structure of reality. It is enough if one tries merely to comprehend a little of this mystery each day.</blockquote>
 								<p> <b>Source: <a href="https://books.google.co.in/books?id=dlYEAAAAMBAJ&pg=PA42&source=gbs_toc_r&redir_esc=y&hl=en#v=onepage&q&f=false" target="_blank">Old Man's Advice to Youth: 'Never Lose a Holy Curiosity.'</a> - LIFE Magazine (2 May 1955) p. 64 </b></p>
 								     <ul class="icons">
