--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -31,9 +33,9 @@
 								<p style="line-height:1.5;"> Source: <a href="https://books.google.co.in/books?id=dlYEAAAAMBAJ&pg=PA42&source=gbs_toc_r&redir_esc=y&hl=en#v=onepage&q&f=false" target="_blank">Old Man's Advice to Youth: 'Never Lose a Holy Curiosity.'</a> - LIFE Magazine (2 May 1955) p. 64 </p>
 								     <ul class="icons">
 									        <li><a href="https://github.com/Praneeth-Avasarala" target="_blank"  class="icon brands fa-github"><span class="label">Github</span></a></li>
-									        <li><a href="mailto:praneethavasarala@gmail.com" target="_blank" class="icon brands fa-envelope-o"><span class="label">Email</span></a></li>
+									        <li><a href="mailto:praneethavasarala@gmail.com" target="_blank" class="fa fa-envelope"></a></li>
 									        <li><a href="https://www.linkedin.com/in/praneeth-avasarala-11b8b7136/" target="_blank"  class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://twitter.com/IamPraneeth77" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										    <li><a href="https://twitter.com/IamPraneeth77" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									        <li><a href="https://www.instagram.com/praneethavasarala/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										
 										
@@ -47,7 +49,7 @@
 								<li><a href="#work">Research</a></li>
 								<li><a href="#cv">CV</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="#elements">Text Syntax</a></li>
+								<!-- <li><a href="#elements">Text Syntax</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
