--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 								<h1>Praneeth Avasarala</h1>
 								<!-- <h2> My Personal Motto - A quote by Albert Einstein  </h2> -->
 						        
-								<blockquote>"The important thing is not to stop questioning. Curiosity has its own reason for existence. One cannot help but be in awe when he contemplates the mysteries of eternity, of life, of the marvelous structure of reality. It is enough if one tries merely to comprehend a little of this mystery each day." -  Albert Einstein </blockquote>
-								<p style="line-height:1.5;"> Source: <a href="https://books.google.co.in/books?id=dlYEAAAAMBAJ&pg=PA42&source=gbs_toc_r&redir_esc=y&hl=en#v=onepage&q&f=false" target="_blank">Old Man's Advice to Youth: 'Never Lose a Holy Curiosity.'</a> - LIFE Magazine (2 May 1955) p. 64 </p>
+								
 								     <ul class="icons">
 									        <li><a href="https://github.com/Praneeth-Avasarala" target="_blank"  class="icon brands fa-github"><span class="label">Github</span></a></li>
 									        <li><a href="mailto:praneethavasarala@gmail.com" target="_blank" class="fa fa-envelope"></a></li>
@@ -61,7 +60,9 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major"> Who am I? </h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<blockquote>"The important thing is not to stop questioning. Curiosity has its own reason for existence. One cannot help but be in awe when he contemplates the mysteries of eternity, of life, of the marvelous structure of reality. It is enough if one tries merely to comprehend a little of this mystery each day." -  Albert Einstein </blockquote>
+								<p style="line-height:1.5;font-size:1.0rem;"> <b>Source: </b> <a href="https://books.google.co.in/books?id=dlYEAAAAMBAJ&pg=PA42&source=gbs_toc_r&redir_esc=y&hl=en#v=onepage&q&f=false" target="_blank">Old Man's Advice to Youth: 'Never Lose a Holy Curiosity.'</a> - LIFE Magazine (2 May 1955) p. 64 </p>
+								<!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
 								<p>I am currently a dedicated Master's student in the field of Astronomy, specializing in Cosmology, within the Department of Astronomy, Astrophysics, and Space Engineering (DAASE) at IIT Indore. My ongoing thesis work revolves around investigating the influence of various source models on the Intergalactic Medium (IGM) during the pivotal Epoch of Reionization, employing the Wavelet scattering transform for in-depth analysis and understanding.</p>
 								<p>My academic journey began with a Master of Technology (M.Tech) degree in Mechanical Engineering from the Department of Mechanical Engineering at IIT Madras. While my initial academic background was in engineering, I experienced a profound shift in my career aspirations, discovering my genuine passion for physics. This transformative realization led me to redirect my academic path towards the captivating world of astrophysics and cosmology.</p>
 								<p>As part of my journey, I am excited to share my research experiences, aspirations, and progress through this webpage. It serves as a platform to connect with my fellow researchers and potential collaborators across the world, as I look forward to continuing my academic pursuits and contributing to the ever-evolving field of astrophysics. Feel free to explore my page to learn more about my academic endeavors and stay updated on my latest research endeavors and discoveries.</p>
