updates homepage intro

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 					<header id="header">
 						<div class="logo">
 							<span class="icon fa-gem"></span>
+							<!-- <span class="image round"><img src="images/pic03.jpg" alt="" /></span>  -->
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Praneeth Avasarala</h1>
-								<!-- <h2> My Personal Motto - A quote by Albert Einstein  </h2> -->
+								<h4 style="background-color: rgba(0, 0, 0, 0.801);"> <i>
+									Welcome to my webpage dedicated to sharing my journey as an aspiring astrophysicist. I'm currently on the path to earning my Master's degree in Astronomy at IIT Indore's Department of Astronomy, Astrophysics, and Space Engineering (DAASE), fueled by a deep fascination for cosmology and the enigmas of our universe. </i> </h4>
 						        
 								
 								     <ul class="icons">
