--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
-							<!-- <span class="image round"><img src="images/pic03.jpg" alt="" /></span>  -->
+							<!-- <span class="icon fa-gem"></span> -->
+							<span class="image round"><img src="images/me_homepage.jpg" alt="" /></span> 
 						</div>
 						<div class="content">
 							<div class="inner">
