--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">About Me</a></li>
-								<li><a href="#work">Research</a></li>
+								<li><a href="#research-work">Research</a></li>
 								<li><a href="#cv">CV</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!-- <li><a href="#elements">Text Syntax</a></li> -->
@@ -71,7 +71,7 @@
 							</article>
 
 						<!-- Work -->
-							<article id="work">
+							<article id="research-work">
 								<h2 class="major">Research</h2>
                     	                                        <ul style="margin-top:-25px;margin-bottom:0px;">
 								   <li><a href="#EoR_research" style="color:#4da6ff;">Cosmic reionization</a>
@@ -82,8 +82,7 @@
 									<img src="data/ReionSim.gif" alt="xf_dt" style="width:70%">
 									<img src="data/pl3.gif" alt="xf_dt" style="width:70%">
 									<img src="data/uib.gif" alt="xf_dt" style="width:70%">
-									<img src="data/clumping.gif" alt="xf_dt" style="width:70%">
-								
+									<img src="data/clumping.gif" alt="xf_dt" style="width:70%">								
 								</div>
 									   
 <!-- 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
