--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 						<!-- Work -->
 							<article id="research-work">
 								<h2 class="major">Research</h2>
-                    	                                        <ul style="margin-top:-25px;margin-bottom:0px;">
-								   <li><a href="#EoR_research" style="color:#4da6ff;">Cosmic reionization</a>
+                    	                                        <!-- <ul style="margin-top:-25px;margin-bottom:0px;">
+								   <li><a href="#EoR_research" style="color:#4da6ff;">Cosmic Reionization</a> -->
 									   
-								<h3 style="color:#4da6ff;text-align: center;" id="EoR_research" >Cosmic reionization</h3>
+								<h3 style="color:#4da6ff;text-align: center;" id="EoR_research" >Cosmic Reionization</h3>
 
 								<div class="row" style="text-align: center">
 									<img src="data/ReionSim.gif" alt="xf_dt" style="width:70%">
