--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 									<img src="data/ReionSim.gif" alt="xf_dt" style="width:70%">
 									<img src="data/pl3.gif" alt="xf_dt" style="width:70%">
 									<img src="data/uib.gif" alt="xf_dt" style="width:70%">
+									<img src="data/sxr.gif" alt="xf_dt" style="width:70%">
 									<img src="data/clumping.gif" alt="xf_dt" style="width:70%">								
 								</div>
 									   
