--- a/index.html
+++ b/index.html
@@ -76,10 +76,14 @@
                     	                                        <!-- <ul style="margin-top:-25px;margin-bottom:0px;">
 								   <li><a href="#EoR_research" style="color:#4da6ff;">Cosmic Reionization</a> -->
 									   
-								<h3 style="color:#4da6ff;text-align: center;" id="EoR_research" >Cosmic Reionization</h3>
+								<h3 style="color:#4da6ff;text-align: center;" id="EoR_research" > Effect of different sources on Cosmic Reionization</h3>
 
 								<div class="row" style="text-align: center">
-									<img src="data/ReionSim.gif" alt="xf_dt" style="width:70%">
+									<figure>
+										<img src="data/ReionSim.gif" alt="xf_dt" style="width:70%">
+										<figcaption>Fiducial Model. Sources : 100% UV photons from Galaxies </figcaption>
+									</figure>
+									
 									<img src="data/pl3.gif" alt="xf_dt" style="width:70%">
 									<img src="data/uib.gif" alt="xf_dt" style="width:70%">
 									<img src="data/sxr.gif" alt="xf_dt" style="width:70%">
