--- a/index.html
+++ b/index.html
@@ -139,10 +139,11 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/Praneeth-Avasarala" target="_blank"  class="icon brands fa-github"><span class="label">Github</span></a></li>
+									<li><a href="mailto:praneethavasarala@gmail.com" target="_blank" class="fa fa-envelope"></a></li>
+									<li><a href="https://www.linkedin.com/in/praneeth-avasarala-11b8b7136/" target="_blank"  class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://twitter.com/IamPraneeth77" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.instagram.com/praneethavasarala/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</article>
 
