--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="mailto:praneethavasarala@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
