--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<?php
-
-if($_POST["message"]) {
-
-mail("your@email.address", "Here is the subject line",
-
-$_POST["insert your message here"]. "From: an@email.address");
-
-}
-
-?>
 
 <!DOCTYPE HTML>
 <!--
@@ -351,7 +340,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 								<section>
 									<h3 class="major">Form</h3>
-									<form method="post" action="form-processor.php">
+									<form method="post" action="myform-processor.php">
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
