--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="https://github.com/Praneeth-Avasarala/praneeth-avasarala.github.io/myform-processor.php">
+								<form method="post" action="/myform-processor.php">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
