--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<?php
+<!-- <?php
 
 if($_POST["message"]) {
 
@@ -9,7 +9,7 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 
 }
 
-?>
+?> -->
 
 <!DOCTYPE HTML>
 <!--
@@ -131,7 +131,7 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="index.php">
+								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
