--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/f/mwkdrwvo">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
