--- a/index.html
+++ b/index.html
@@ -92,27 +92,50 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 								<h3 style="color:#4da6ff;text-align: center;" id="EoR_research" > Effect of different sources on Cosmic Reionization</h3>
 
 								<div class="row" style="text-align: center">
-									<figure>
-										<figcaption>Fiducial Model. Sources : 100% UV photons from Galaxies </figcaption>
-										<img src="data/ReionSim.gif" alt="xf_dt" style="width:70%">										
-									</figure>
-									<figure>
-										<figcaption>n=3.0 Power Law halomass-dependent efficiency Model. Sources : 100% UV photons from Galaxies </figcaption>
-										<img src="data/pl3.gif" alt="xf_dt" style="width:70%">										
-									</figure>
-									<figure>
-										<figcaption>Uniform Ionizing Background Model. Sources : 80% Hard Xray photons from AGNs or X-ray Binaries & 20% UV photons </figcaption>
-										<img src="data/uib.gif" alt="xf_dt" style="width:70%">										
-									</figure>
-									<figure>
-										<figcaption>Soft X-ray Dominated Model. Sources : 80% Soft X-ray photons & 20% UV photons from Galaxies </figcaption>
-										<img src="data/sxr.gif" alt="xf_dt" style="width:70%">										
-									</figure>
-									<figure>
-										<figcaption>Inhomogenous Recombination Model. Sources : 100% UV photons from Galaxies </figcaption>
-										<img src="data/clumping.gif" alt="xf_dt" style="width:70%">										
-									</figure>									
-								
+									<!-- <div class="column"> -->
+										<figure>
+											<figcaption>Fiducial Model. Sources : 100% UV photons from Galaxies </figcaption>
+											<img src="data/ReionSim.gif" alt="xf_dt" style="width:70%">										
+										</figure>
+										<figure>
+											<figcaption>n=3.0 Power Law halomass-dependent efficiency Model. Sources : 100% UV photons from Galaxies </figcaption>
+											<img src="data/pl3.gif" alt="xf_dt" style="width:70%">										
+										</figure>
+										<figure>
+											<figcaption>Uniform Ionizing Background Model. Sources : 80% Hard Xray photons from AGNs or X-ray Binaries & 20% UV photons </figcaption>
+											<img src="data/uib.gif" alt="xf_dt" style="width:70%">										
+										</figure>
+										<figure>
+											<figcaption>Soft X-ray Dominated Model. Sources : 80% Soft X-ray photons & 20% UV photons from Galaxies </figcaption>
+											<img src="data/sxr.gif" alt="xf_dt" style="width:70%">										
+										</figure>
+										<figure>
+											<figcaption>Inhomogenous Recombination Model. Sources : 100% UV photons from Galaxies </figcaption>
+											<img src="data/clumping.gif" alt="xf_dt" style="width:70%">										
+										</figure>									
+									<!-- </div>								 -->
+								</div>
+								<div class="row">
+									<div class="column">
+									  <img src="data/filter_j=2.jpg" alt="Filter(j=2)" style="width:100%">
+									</div>
+									<div class="column">
+									  <img src="data/filter_j=4.jpg" alt="Filter(j=4)" style="width:100%">
+									</div>
+									<div class="column">
+									  <img src="data/filter_j=6.jpg" alt="Filter(j=6)" style="width:100%">
+									</div>
+								  </div>
+								<div class="row">
+									<div class="column">
+									  <img src="data/filter_j,l=5,5.jpg" alt="Filter(j=2)" style="width:100%">
+									</div>
+									<div class="column">
+									  <img src="data/filter_j,l=5,10.jpg" alt="Filter(j=4)" style="width:100%">
+									</div>
+									<div class="column">
+									  <img src="data/filter_j,l=5,15.jpg" alt="Filter(j=6)" style="width:100%">
+									</div>
 								</div>
 									   
 <!-- 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
