--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
                     	                                        <!-- <ul style="margin-top:-25px;margin-bottom:0px;">
 								   <li><a href="#EoR_research" style="color:#4da6ff;">Cosmic Reionization</a> -->
 									   
-								<h2 style="color:#4da6ff;text-transform: uppercase;text-align: center" id="EoR_research" > Effect of different sources on Cosmic Reionization</h2>
+								<h2 style="color:#4da6ff;text-transform: uppercase;text-align: center" id="EoR_research" > Cosmic Reionization : Distinguishing different source models using Wavelet Scattering Transform (WST) </h2>
 
 								<div class="row" style="text-align: center">
 									<figure>
@@ -141,6 +141,27 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 									  <img src="data/filter_j,l=5,15.jpg" alt="Filter(j=6)" style="width:100%">
 									</div>
 								</div>
+								<h2 style="color:#4da6ff;text-transform: uppercase;text-align: center" id="EoR_research" > WST Results </h2>
+								<div class="row" style="text-align: center">
+									<figure>
+									<img src="data/S0_all.png" alt="xf_dt" style="width:40%">
+									<figcaption>S0 Coefficient : Measures the mean brightness temperature</figcaption>
+									</figure>
+								</div>
+								<div class="row" style="text-align: center">
+									<figure>
+									<img src="data/S1_all.png" alt="xf_dt" style="width:40%">
+									<figcaption>S1 Coefficient : Measures fluctuations as a function of scale similar to Power Spectrum</figcaption>
+									</figure>
+								</div>
+								<div class="row" style="text-align: center">
+									<figure>
+									<img src="data/S21_all.png" alt="xf_dt" style="width:40%">
+									<figcaption>S21 Coefficient : Measures correlation between fluctuations of different scales -- Non-Gaussian Information</figcaption>
+									</figure>
+								</div>
+
+
 									   
 <!-- 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 <!-- 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p> -->
