--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 								</div>
 								<div class="row" style="text-align: center">									
 									<img src="data/clumping.gif" alt="xf_dt" style="width:50%">
-								</div>								
+								</div>
+								<h2 style="color:#4da6ff;text-transform: uppercase;text-align: center;margin-top:4rem" id="EoR_research" > WST Filters </h2>
+								
 								<div class="row">
 									<div class="column3">
 									  <img src="data/filter_j=2.jpg" alt="Filter(j=2)" style="width:100%">
@@ -130,6 +132,7 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 									  <img src="data/filter_j=6.jpg" alt="Filter(j=6)" style="width:100%">
 									</div>
 								  </div>
+								
 								<div class="row">
 									<div class="column3">
 									  <img src="data/filter_j,l=5,5.jpg" alt="Filter(j=2)" style="width:100%">
@@ -141,22 +144,22 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 									  <img src="data/filter_j,l=5,15.jpg" alt="Filter(j=6)" style="width:100%">
 									</div>
 								</div>
-								<h2 style="color:#4da6ff;text-transform: uppercase;text-align: center" id="EoR_research" > WST Results </h2>
+								<h2 style="color:#4da6ff;text-transform: uppercase;text-align: center;margin-top:4rem" id="EoR_research" > WST Results </h2>
 								<div class="row" style="text-align: center">
 									<figure>
-									<img src="data/S0_all.png" alt="xf_dt" style="width:40%">
+									<img src="data/S0_all.png" alt="xf_dt" style="width: 90%">
 									<figcaption>S0 Coefficient : Measures the mean brightness temperature</figcaption>
 									</figure>
 								</div>
 								<div class="row" style="text-align: center">
 									<figure>
-									<img src="data/S1_all.png" alt="xf_dt" style="width:40%">
+									<img src="data/S1_all.png" alt="xf_dt" style="width:90%">
 									<figcaption>S1 Coefficient : Measures fluctuations as a function of scale similar to Power Spectrum</figcaption>
 									</figure>
 								</div>
 								<div class="row" style="text-align: center">
 									<figure>
-									<img src="data/S21_all.png" alt="xf_dt" style="width:40%">
+									<img src="data/S21_all.png" alt="xf_dt" style="width:90%">
 									<figcaption>S21 Coefficient : Measures correlation between fluctuations of different scales -- Non-Gaussian Information</figcaption>
 									</figure>
 								</div>
