--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 								<div class="row" style="text-align: center">									
 									<img src="data/clumping.gif" alt="xf_dt" style="width:50%">
 								</div>
-								<h2 style="color:#4da6ff;text-transform: uppercase;text-align: center;margin-top:4rem" id="EoR_research" > WST Filters </h2>
+								<h2 style="color:#4da6ff;text-transform: uppercase;text-align: center;margin-top:4rem" id="EoR_research" > Wavelet Filters </h2>
 								
 								<div class="row">
 									<div class="column3">
