--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 								<div class="row" style="text-align: center">
 									<figure>
 									<img src="data/S1_all.png" alt="xf_dt" style="width:90%">
-									<figcaption>S1 Coefficient : Measures fluctuations as a function of scale similar to Power Spectrum</figcaption>
+									<figcaption>S1 Coefficient : Measures the strength of fluctuations in 21cm brightness temperature as a function of scale - similar to Power Spectrum</figcaption>
 									</figure>
 								</div>
 								<div class="row" style="text-align: center">
 									<figure>
 									<img src="data/S21_all.png" alt="xf_dt" style="width:90%">
-									<figcaption>S21 Coefficient : Measures correlation between fluctuations of different scales -- Non-Gaussian Information</figcaption>
+									<figcaption>S21 Coefficient : Measures correlation between fluctuations of different scales -- Non-Gaussian Information beyond Power Spectrum </figcaption>
 									</figure>
 								</div>
 
