--- a/index.html
+++ b/index.html
@@ -120,9 +120,21 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 									<img src="data/clumping.gif" alt="xf_dt" style="width:50%">
 								</div>
 								<h2 style="color:#4da6ff;text-transform: uppercase;text-align: center;margin-top:4rem" id="EoR_research" > Wavelet Filters </h2>
+
+								<!-- <div class="row">
+									<div class="column2">
+									    <figure>
+									      <img src="data/filter3D_real.png" alt="Filter(j=2)" style="width:100%">
+										  <figcaption>Morlet Wavelet - Real Part</figcaption>
+										</figure>
+									</div>
+									<div class="column2">
+									  <img src="data/filter3D_imag.png" alt="Filter(j=4)" style="width:100%">
+									</div>
+								  </div> -->
 								
 								<div class="row">
-									<div class="column3">
+									<div class="column3">									
 									  <img src="data/filter_j=2.jpg" alt="Filter(j=2)" style="width:100%">
 									</div>
 									<div class="column3">
