--- a/index.html
+++ b/index.html
@@ -121,17 +121,11 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 								</div>
 								<h2 style="color:#4da6ff;text-transform: uppercase;text-align: center;margin-top:4rem" id="EoR_research" > Wavelet Filters </h2>
 
-								<!-- <div class="row">
-									<div class="column2">
-									    <figure>
-									      <img src="data/filter3D_real.png" alt="Filter(j=2)" style="width:100%">
-										  <figcaption>Morlet Wavelet - Real Part</figcaption>
-										</figure>
-									</div>
-									<div class="column2">
-									  <img src="data/filter3D_imag.png" alt="Filter(j=4)" style="width:100%">
-									</div>
-								  </div> -->
+								<div class="row" style="text-align: center">
+
+									  <img src="data/3d_filters.png" alt="Filter(j=6)" style="width:70%">
+									
+								  </div>
 								
 								<div class="row">
 									<div class="column3">									
