--- a/index.html
+++ b/index.html
@@ -169,6 +169,14 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 									<figcaption>S21 Coefficient : Measures correlation between fluctuations of different scales -- Non-Gaussian Information beyond Power Spectrum </figcaption>
 									</figure>
 								</div>
+								<div class="row">
+								    <div class="column2">										
+											<img src="BS_fidu_vs_clumping.png" alt="xf_dt"style="width:100%">					
+									</div>
+									<div class="column2">										
+											<img src="S21_fidu_vs_clumping.png" alt="xf_dt"style="width:100%">     
+									</div>
+								</div>
 
 
 									   
