--- a/index.html
+++ b/index.html
@@ -170,12 +170,15 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 									</figure>
 								</div>
 								<div class="row">
+									<figure>
 								    <div class="column2">										
 											<img src="BS_fidu_vs_clumping.png" alt="xf_dt"style="width:100%">					
 									</div>
 									<div class="column2">										
 											<img src="S21_fidu_vs_clumping.png" alt="xf_dt"style="width:100%">     
 									</div>
+									<figcaption style="text-align: center">Comparison with Bispectrum for two of the models clearly shows how WST is better at probing non-Gaussian morphologies.</figcaption>
+								    </figure>
 								</div>
 
 
