--- a/index.html
+++ b/index.html
@@ -151,19 +151,19 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 									</div>
 								</div>
 								<h2 style="color:#4da6ff;text-transform: uppercase;text-align: center;margin-top:4rem" id="EoR_research" > WST Results </h2>
-								<div class="row" style="text-align: center">
+								<div class="row" style="text-align: center;margin-bottom: 3rem">
 									<figure>
-									<img src="data/S0_all.png" alt="xf_dt" style="width: 90%">
+									<img src="data/S0_all.png" alt="xf_dt" style="width: 60%">
 									<figcaption>S0 Coefficient : Measures the mean brightness temperature</figcaption>
 									</figure>
 								</div>
-								<div class="row" style="text-align: center">
+								<div class="row" style="text-align: center;margin-bottom: 3rem">
 									<figure>
 									<img src="data/S1_all.png" alt="xf_dt" style="width:90%">
 									<figcaption>S1 Coefficient : Measures the strength of fluctuations in 21cm brightness temperature as a function of scale - similar to Power Spectrum</figcaption>
 									</figure>
 								</div>
-								<div class="row" style="text-align: center">
+								<div class="row" style="text-align: center;margin-bottom: 3rem">
 									<figure>
 									<img src="data/S21_all.png" alt="xf_dt" style="width:90%">
 									<figcaption>S21 Coefficient : Measures correlation between fluctuations of different scales -- Non-Gaussian Information beyond Power Spectrum </figcaption>
