--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 									<div class="column2">										
 											<img src="data/S21_fidu_vs_clumping.png" alt="xf_dt"style="width:100%">     
 									</div>
-									<figcaption style="text-align: center">Comparison with Bispectrum for two of the models clearly shows how WST is better at probing non-Gaussian morphologies.</figcaption>
+									<figcaption style="text-align: center">Comparison with Bispectrum for two of the models clearly shows how WST is better at probing non-Gaussian morphologies in our models</figcaption>
 								    </figure>
 								</div>
 
