--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 							<ul>
 								<li><a href="#intro">About Me</a></li>
 								<li><a href="#research-work">Research</a></li>
-								<li><a href="#cv">CV</a></li>
+								<li><a href="#cv">CV & Thesis</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!-- <li><a href="#elements">Text Syntax</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -192,6 +192,8 @@ $_POST["Here's the message left on the Webpage"]. "From: praneethavasarala@gmail
 							<article id="cv" style="text-align: center">
 								<h2 class="major">My Curriculum Vitae</h2>								    
 									<object data="data/CV.pdf" type="application/pdf" width="800" height="2100">CV</object>
+								<h2 class="major">My Master's Thesis</h2>								    
+									<object data="data/Praneeth_s_Thesis.pdf" type="application/pdf" width="800" height="2000">CV</object>
 <!-- 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
 <!-- 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p> -->
 							</article>
